force-app/main/default/objects/Coverage_Sector_Dependency__c/Coverage_Sector_Dependency__c.object-meta.xml
<CustomObject>
    <label>Coverage Sector Dependency</label>
    <nameField>
        <displayFormat>CSDN-{0000000000}</displayFormat>
        <label>Coverage Sector Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coverage Sector Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>