force-app/main/default/objects/Coverage_Sector_Dependency__c/fields/FullDependencyId__c.field-meta.xml
<CustomField>
    <fullName>FullDependencyId__c</fullName>
    <formula>TypeRecordID__c + PrimaryRecordId__c + SecondaryRecordId__c + TertiaryRecordId__c</formula>
    <label>FullDependencyId</label>
    <type>Text</type>
</CustomField>