force-app/main/default/objects/Coverage_Sector_Dependency__c/fields/PrimaryRecordId__c.field-meta.xml
<CustomField>
    <fullName>PrimaryRecordId__c</fullName>
    <formula>CASESAFEID(PrimarySector__r.Id)</formula>
    <label>PrimaryRecordId</label>
    <type>Text</type>
</CustomField>