force-app/main/default/objects/Coverage_Sector_Dependency__c/fields/SecondaryRecordId__c.field-meta.xml
<CustomField>
    <fullName>SecondaryRecordId__c</fullName>
    <formula>CASESAFEID(SecondarySector__r.Id)</formula>
    <label>SecondaryRecordId</label>
    <type>Text</type>
</CustomField>