force-app/main/default/objects/Coverage_Sector_Dependency__c/fields/SecondarySector__c.field-meta.xml
<CustomField>
    <fullName>SecondarySector__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Secondary Sector</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SectorValue__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>SectorValue__c.DependencyValue__c</field>
            <operation>equals</operation>
            <value>Secondary</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SectorValue__c</referenceTo>
    <relationshipLabel>Coverage Sector Dependencies (Secondary Sector)</relationshipLabel>
    <relationshipName>CoverageSectorDependencies3</relationshipName>
    <type>Lookup</type>
</CustomField>