force-app/main/default/objects/Coverage_Sector_Dependency__c/fields/TertiaryRecordId__c.field-meta.xml
<CustomField>
    <fullName>TertiaryRecordId__c</fullName>
    <formula>CASESAFEID(TertiarySector__r.Id)</formula>
    <label>TertiaryRecordId</label>
    <type>Text</type>
</CustomField>