force-app/main/default/objects/Coverage_Sector_Dependency__c/fields/TypeRecordID__c.field-meta.xml
<CustomField>
    <fullName>TypeRecordID__c</fullName>
    <description>This is the CASESAFEID used in the unique identifier for the Coverage Type value.</description>
    <formula>CASESAFEID(CoverageType__r.Id)</formula>
    <label>TypeRecordID</label>
    <type>Text</type>
</CustomField>