force-app/main/default/objects/Coverage_Sector_Dependency__c/fields/UniqueRecordKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueRecordKey__c</fullName>
    <label>UniqueRecordKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>