force-app/main/default/objects/Coverage_Sector_Dependency__c/listViews/All_Coverage_Sector_Dependencies.listView-meta.xml
<ListView>
    <fullName>All_Coverage_Sector_Dependencies</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>CoverageType__c</columns>
    <columns>PrimarySector__c</columns>
    <columns>SecondarySector__c</columns>
    <columns>TertiarySector__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Coverage Sector Dependencies</label>
</ListView>