force-app/main/default/objects/Coverage_Sector_Dependency__c/listViews/Business_Services.listView-meta.xml
<ListView>
    <fullName>Business_Services</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>CoverageType__c</columns>
    <columns>PrimarySector__c</columns>
    <columns>SecondarySector__c</columns>
    <columns>TertiarySector__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CoverageType__c</field>
        <operation>equals</operation>
        <value>Business Services</value>
    </filters>
    <label>Business Services</label>
</ListView>