force-app/main/default/objects/Coverage_Sector_Dependency__c/listViews/Consumer_Food_Retail.listView-meta.xml
<ListView>
    <fullName>Consumer_Food_Retail</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>CoverageType__c</columns>
    <columns>PrimarySector__c</columns>
    <columns>SecondarySector__c</columns>
    <columns>TertiarySector__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CoverageType__c</field>
        <operation>equals</operation>
        <value>Consumer Food &amp; Retail</value>
    </filters>
    <label>Consumer Food &amp; Retail</label>
</ListView>